--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/logic.js"></script>
-    <link rel="icon" href="/img/logosolo.png">
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
@@ -15,12 +14,7 @@
 </head>
 <!-- Home -->
     <!-- Bootstrap -->
-
-<img src="/img/Login.jpg" alt="fondo" width="1366" style="
-													height: 100%;
-													background-position: center;
-													background-repeat: no-repeat;
-													background-size: auto;"	>
+<img src="/img/Login.jpg" alt="fondo" class="fondo">
 <div style="background-color:#99b0e8;
 			border:1px solid black;
 			width: 660px;
@@ -30,7 +24,7 @@
   			top: 50%;
   			transform: translate(-50%, -50%);">
 
-	<h1> &nbsp; Bienvenido [User]!</h1>
+	<h1> &nbsp; Bienvenide!</h1>
 		  		<br><br>
 		  		<button type="button" onclick="location.href='CrearOperacionEgreso';"style="width: 260px; height: 50px; position: relative; left:62px">CargarOperacionEgreso </button> &nbsp; &nbsp;
 
