--- a/src/main/resources/templates/AsociadorEgresoCategoria.hbs
+++ b/src/main/resources/templates/AsociadorEgresoCategoria.hbs
@@ -1,13 +1,21 @@
-<!-- Alta evento -->
-    <!-- Bootstrap -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/27517fada0.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="/js/logic.js"></script>
+    <link rel="icon" href="/img/logosolo.png">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
-<img src="Login.jpg" alt="ropa" width="1366" style="
-
-													  height: 100%;
-													  background-position: center;
-													  background-repeat: no-repeat;
-													  background-size: cover;"	>
+    <title>Asociando</title>
+</head>
+<!-- Home -->
+    <!-- Bootstrap -->
+<img src="/img/Login.jpg" alt="fondo" class="fondo">
 
 <button type="button" onclick="location.href='home';" style="width: 100px; height: 50px; position: absolute; left: 5%; top: 5%; transform: translate(-50%, -50%);">Volver a Home</button>
 
@@ -31,10 +39,9 @@
   			transform: translate(-50%, -50%);">
 			<br>
 				&nbsp;&nbsp;&nbsp;Egreso: <select style=" width: 200; position: absolute; left:120px">
-					  <option value="Egreso1">Egreso1</option>
-					  <option value="Egreso2">Egreso2</option>
-					  <option value="Egreso3">Egreso3</option>
-					  <option value="Egreso4">Egreso4</option>
+                        {{#each egresos}}
+                            <option value='{{numeroOperacion}}'>{{descripcion}}</option>
+                        {{/each}}
 					</select>
 				<br><br>
 				&nbsp;&nbsp;&nbsp;Presupuesto: <select style=" width: 200; position: absolute; left:120px">
