--- a/src/main/resources/templates/IngresosEgresos.hbs
+++ b/src/main/resources/templates/IngresosEgresos.hbs
@@ -2,7 +2,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
-<img src="Login.jpg" alt="ropa" width="1366" style="
+<img src="/img/Login.jpg" alt="fondo" width="1366" style="
 													  height: 100%;
 													  background-position: center;
 													  background-repeat: no-repeat;
@@ -21,18 +21,29 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Criterio: <select style=" width: 350; position: absolute; left:160px">
 					  <option value="Criterio1">Criterio1</option>
 					  <option value="Criterio2">Criterio2</option>
-					  <option value="Criterio3">Criterio3</option>
-					  <option value="Criterio4">Criterio4</option>
+					  <option value="Criterio2">Criterio2</option>
 					</select>
 				<br><br>
+		<button type="button" onclick=inicio();" style="width: 200px; height: 30px; position: relative; left:25px"> Filtrar</button>
 		<div style="background-color:#b0c1eb;
 			border:1px solid black;
 			width: 1250px;
-  			height: 425px;
+  			height: 350px;
   			position: absolute;
   			left: 50%;
   			top: 55%;
-  			transform: translate(-50%, -50%);"> <h1 style=" position: absolute; left:50%; top:50%; transform: translate(-50%, -50%);">Aca van los ingresos/egresos</h1> </div>
+  			transform: translate(-50%, -50%);">
+  			<table class="tabla" id="tabla">
+  			<thread>
+  			<th><i class="fas fa-user"></i>Descripcion de la Operacion</th>
+  			</thread>
+  			{{#each operaciones}}
+  			<tr>
+  			<td><i class= "fa fa-operacion"></i>{{descripcion}}</td>
+            </tr>
+            {{/each}}
+            </table>
+  			</div>
 
 	  	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	  	<button type="button" onclick="location.href='home';" style="width: 200px; height: 30px; position: relative; left:25px"> Volver a Home</button>
