--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -13,7 +13,7 @@
 <body>
 <header>
     <img src="/img/utnLogo.png" alt="utn logo" class="utnLogo">
-    <p>Diseño de Sistemas</p>
+    <h1 style="text-align:center">Diseño de Sistemas</h1>
 </header>
 <div class="main_container">
     <br><br>
@@ -21,12 +21,15 @@
         <form action="/login" method="post" class="form-">
             <div class="form-group">
                 <label>Nombre de usuario</label>
-                <input class="form-control" name="nombreDeUsuario">
+                <label>
+                    <input class="form-control" name="nombreDeUsuario">
+                </label>
             </div>
             <div class="form-group">
                 <label>Contraseña</label>
                 <input class="form-control" name="contrasenia" type="password">
             </div>
+            <p></p>
             <button type="submit">Ingresar</button>
         </form>
     </div>
