--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -7,32 +7,32 @@
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/logic.js"></script>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos-login.css">
     <title>Login</title>
 </head>
-<body>
-<header>
-    <img src="/img/utnLogo.png" alt="utn logo" class="utnLogo">
-    <h1 style="text-align:center">Diseño de Sistemas</h1>
-</header>
-<div class="main_container">
-    <br><br>
-    <div align="center">
-        <form action="/login" method="post" class="form-">
-            <div class="form-group">
-                <label>Nombre de usuario</label>
-                <label>
-                    <input class="form-control" name="nombreDeUsuario">
-                </label>
-            </div>
-            <div class="form-group">
-                <label>Contraseña</label>
-                <input class="form-control" name="contrasenia" type="password">
-            </div>
-            <p></p>
-            <button type="submit">Ingresar</button>
-        </form>
+  <body>
+    <h1>Login</h1>
+      <div class="general"><br><br>
+            <form action="/login" method="post" class="form-">
+                <div align="center">
+                    <img class="foto_login" src="img/login.png">
+                </div><br><br>
+                <div class="foto-usuario" align="right">
+                    <img src="img/usuario.png" width="35" height="35">
+                </div>
+                <div class="fondo-box" align="center">
+                    <input class="form-control" name="nombreDeUsuario" placeholder="Usuario">
+                </div><br><br><br><br>
+                <div class="foto-usuario" align="right">
+                    <img src="img/contraseña.png" width="35" height="35">
+                </div>
+                <div class="fondo-box" align="center">
+                    <input class="form-control" name="contrasenia" type="password" placeholder="Contraseña">
+                </div><br><br><br>
+                <div class="general-home">
+                <button class="boton_home" type="submit" onclick="location.href='index-menu-revisor.html'">Iniciar Sesión</button>
+            </form>
+        </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
