--- a/src/main/resources/templates/index-menu-revisor.hbs
+++ b/src/main/resources/templates/index-menu-revisor.hbs
@@ -13,7 +13,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 class="titulo">Bienvenide</h1>
+    <h1 class="titulo">Poem</h1>
     <form action="/logout" method="get" class="form-">
         <button class="boton_salir" onclick="location.href='index-login.html'" type="submit">Salir</button>
     </form>
