--- a/src/main/resources/templates/cargar-ingreso.hbs
+++ b/src/main/resources/templates/cargar-ingreso.hbs
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilo-cargar-ingreso.css">
-    <title>Login</title>
+    <title>Cargar Ingreso</title>
 </head>
   <body>
       <div class="titulo">
@@ -17,21 +17,23 @@
       <div class="general">
         <br><br><br>
         <div class="general-medio">
+    <form action="/asocEgresoPresupuestoACategoria" method="post" class="form-">
       <h1 class="medio">Descripción:</h1>
          </div><br>
          <div class="box-Medio">
-          <input type=text">
+          <input type="text" name="descripcion" required>
           </div>
           <br><br><br>
           <div class="general-numero">
         <h1 class="numero">Monto Total:</h1>
            </div><br>
            <div class="box-numero">
-             <input type=number">
+             <input type="number" name="monto" required>
          </div>
          <br><br><br>
          <div class="general-siguiente">
-       <button class="boton_siguiente" onclick="location.href='cargar-Organizacion'">Guardar Ingreso</button>
+       <button class="boton_siguiente" type="submit">Guardar Ingreso</button>
+   </form>
      </div><br><br><br><br><br>
          <div class="general-home">
          <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
