--- a/src/main/resources/templates/index-menu-revisor.hbs
+++ b/src/main/resources/templates/index-menu-revisor.hbs
@@ -29,7 +29,7 @@
     <button class="boton_visualizacion" onclick="location.href='visualizacionIngresoEgresoPorCat'">
         <p class="texto-visualizacion">Visualizar Egresos</p>
     </button>
-    <button class="boton_bandeja" onclick="location.href='ver-bandeja.html'">
+    <button class="boton_bandeja" onclick="location.href='ver-bandeja'">
         <p class="texto-bandeja">Bandeja de Entrada</p>
     </button>
     <h3 class="subtitulo">¿Quienes somos?</h3>
