--- a/src/main/resources/templates/index-crear-egreso.hbs
+++ b/src/main/resources/templates/index-crear-egreso.hbs
@@ -42,7 +42,7 @@
      <button class="boton_siguiente" onclick="location.href='crear-medio-pago.html'">Siguiente</button>
    </div>
    <div class="general-siguiente2">
- <button class="boton_siguiente" onclick="location.href='crear-proveedor.html'">Volver</button>
+ <button class="boton_volver" onclick="location.href='crear-proveedor.html'">Volver</button>
 </div><br><br><br><br>
        <div class="general-home">
        <button class="boton_home" onclick="location.href='index-menu-revisor.html'">Volver a Home</button>
