--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -7,35 +7,33 @@
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/logic.js"></script>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos-home.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
     <title>Home</title>
 </head>
-<!-- Home -->
-    <!-- Bootstrap -->
-<img src="/img/Login.jpg" alt="fondo" class="fondo">
-<div style="background-color:#99b0e8;
-			border:1px solid black;
-			width: 660px;
-  			height: 350px;
-  			position: absolute;
-  			left: 50%;
-  			top: 50%;
-  			transform: translate(-50%, -50%);">
-
-	<h1> &nbsp; Bienvenide!</h1>
-		  		<br><br>
-		  		<button type="button" onclick="location.href='CrearOperacionEgreso';"style="width: 260px; height: 50px; position: relative; left:62px">CargarOperacionEgreso </button> &nbsp; &nbsp;
-
-		  		<button type="button" onclick="location.href='asocEgresoPresupuestoACategoria';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarEgresoPresupuestoACategoria </button>
-		  		<br><br>
-		  		<button type="button" onclick="location.href='asocIngresoEgreso';"style="width: 260px; height: 50px; position: relative; left:62px">AsociarIngresosEgresos </button> &nbsp; &nbsp;
-
-		  		<button type="button" onclick="location.href='visualizacionIngresoEgresoPorCat';"style="width: 260px; height: 50px; position: relative; left:62px">Visualizar IngresosEgresos </button>
-		  		<br><br>
-		  		<button type="button" onclick="location.href='BandejaDeMensajes';"style="width: 260px; height: 50px; position: relative; left:200px">BandejaDeMensajes </button> &nbsp; &nbsp;
-	  	</div>
-
-</div>
+<body>
+<h1 class="titulo">Poem</h1>
+<form action="/logout" method="get" class="form-">
+    <button class="boton_salir" onclick="location.href='index-login.html'" type="submit">Salir</button>
+</form>
+<button class="boton_crearOPE" onclick="location.href='CrearOperacionEgreso';">
+    <p class="texto-operacion">Crear Operacion de Egreso</p>
+</button>
+<button class="boton_crearIN" onclick="location.href='asocEgresoPresupuestoACategoria'">
+    <p class="texto-ingreso">Cargar Operacion de Ingreso</p>
+</button>
+<button class="boton_asociar" onclick="location.href='asocIngresoEgreso'">
+    <p class="texto-asociar">Asociar Ingresos</p>
+</button>
+<button class="boton_visualizacion" onclick="location.href='visualizacionIngresoEgresoPorCat'">
+    <p class="texto-visualizacion">Visualizar Egresos</p>
+</button>
+<h3 class="subtitulo">¿Quienes somos?</h3>
+<p class= "descripcion">
+    Somos una organización sin fines de lucro fundada en el año 2003, donde nuestra misión es acompañar la preparación laboral, promover el desarrollo, generar emprendimientos y fortalecer organizaciones productivas ya constituidas.
+    <br>
+    Apoyamos a toda persona que necesite apoyo, asesoramiento y/o acompañamiento en proyectar sus ideas como herramientas para generar un trabajo autónomo, así como a jóvenes y adultos que necesitan orientación y capacitación para mejorar su formación con el fin de conseguir un empleo
+</p>
+</body>
 </html>
