Agregado de ingreso

--- a/src/main/resources/templates/cargar-ingreso.hbs
+++ b/src/main/resources/templates/cargar-ingreso.hbs
@@ -17,7 +17,7 @@
       <div class="general">
         <br><br><br>
         <div class="general-medio">
-    <form action="/asocEgresoPresupuestoACategoria" method="post" class="form-">
+    <form action="/ingreso" method="post" class="form-">
       <h1 class="medio">Descripción:</h1>
          </div><br>
          <div class="box-Medio">
