--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -20,7 +20,7 @@
 <button class="boton_crearOPE" onclick="location.href='CrearOperacionEgreso';">
     <p class="texto-operacion">Crear Operacion de Egreso</p>
 </button>
-<button class="boton_crearIN" onclick="location.href='asocEgresoPresupuestoACategoria'">
+<button class="boton_crearIN" onclick="location.href='ingreso'">
     <p class="texto-ingreso">Cargar Operacion de Ingreso</p>
 </button>
 <button class="boton_asociar" onclick="location.href='asocIngresoEgreso'">
