--- a/src/main/resources/templates/index-crear-egreso.hbs
+++ b/src/main/resources/templates/index-crear-egreso.hbs
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilos-cargar-egreso.css">
-    <title>Login</title>
+    <title>Crear egreso</title>
 </head>
 <body>
     <div class="titulo">
@@ -17,32 +17,32 @@
     <div class="general">
       <br><br>
       <div class="general-fecha">
+    <form action="/crearEgreso1" method="post" class="form-">
     <h1 class="fecha">Fecha de Operación:</h1>
        </div><br>
        <div class="box-Fecha">
-     <input type="date">
+     <input type="date" name="fecha" required>
         </div>
         <br><br><br>
         <div class="general-proveedor">
-      <h1 class="proveedor">Proveedor:</h1>
+      <h1 class="proveedor">Cantidad Minima de <br> Presupuestos:</h1>
          </div><br>
          <div class="box-proveedor">
-       <select class="opcion-multiple">
-          <option value="value1">Value 1</option>
-        </select>
+       <input type="text" name="cantidadMinima" required>
        </div>
        <br><br><br>
        <div class="general-valor">
      <h1 class="numero-valor">Valor Total:</h1>
    </div><br>
         <div class="box-valor">
-      <input type="number">
+      <input type="text" name="valorTotal" required>
       </div><br><br><br><br>
        <div class="general-siguiente">
      <button class="boton_siguiente" onclick="location.href='crear-medio-pago.html'">Siguiente</button>
+     </form>
    </div>
    <div class="general-siguiente2">
- <button class="boton_volver" onclick="location.href='crear-proveedor.html'">Volver</button>
+ <button class="boton_siguiente" onclick="location.href='crear-proveedor.html'">Volver</button>
 </div><br><br><br><br>
        <div class="general-home">
        <button class="boton_home" onclick="location.href='index-menu-revisor.html'">Volver a Home</button>
