--- a/src/main/resources/templates/visualizar-egresos.hbs
+++ b/src/main/resources/templates/visualizar-egresos.hbs
@@ -16,31 +16,34 @@
       </div>
       <div class="general">
         <br>
-        <div class="general-medio">
+        <div class="general-visualizar-egreso-ingreso">
       <h1 class="medio">Criterio:</h1>
-         </div><br><br>
-         <div class="box-Medio">
-           <select class="opcion-multiple">
-               <option value="value1"></option>
-               </select>
-             <br><br><br>
+            <div class="box-Medio">
+                <select class="opcion-multiple">
+                    <option value="value1"></option>
+                </select>
+                <br><br><br>
+            </div>
+            <br><br><br>
+            &emsp; &emsp;  &emsp; &emsp; <button class="boton_salir" onclick="location.href='/visualizacionIngresoEgresoPorCat'">Filtrar</button>
+            <br><br>
 
-             <div class="box-Medio">
-                 {{#each egresos}}
-                     <h3> Egreso {{inc @index}}: </h3>
-                     <p> {{numeroOperacion}}-{{descripcion}}-{{fechaOperacion}}-{{montoTotal}}</p>
-                 {{else}}
-                     <p> &emsp; &emsp; Sin egresos.</p>
-                 {{/each}}
+            {{#each egresos}}
+                <h3> Egreso {{inc @index}}: </h3>
+                <p> &emsp; &emsp; id: {{numeroOperacion}}  -  desc:{{descripcion}}  -  fecha: {{fechaOperacion}}  -  monto:{{montoTotal}}</p>
+            {{else}}
+                <p> Sin egresos.</p>
+            {{/each}}
 
-                 {{#each ingresos}}
-                     <h3> Egreso {{inc @index}}: </h3>
-                     <p> &emsp; {{id}}-{{descripcion}}-{{fechaOperacion}}-{{montoTotal}}</p>
-                 {{else}}
-                     <p> &emsp; &emsp; Sin egresos.</p>
-                 {{/each}}
-             </div>
-          </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            {{#each ingresos}}
+                <h3> Ingreso {{inc @index}}: </h3>
+                <p> &emsp; &emsp; id: {{id}}  -   desc:{{descripcion}}  -  fecha: {{fechaOperacion}}  -  monto:{{montoTotal}}</p>
+            {{else}}
+                <p> Sin egresos.</p>
+            {{/each}}
+         </div>
+          <br><br>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
           <br><br><br><br><br>
          <div class="general-home">
          <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
