mini fix a nombre

--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -24,7 +24,7 @@
                     <input class="form-control" name="nombreDeUsuario" placeholder="Usuario">
                 </div><br><br><br><br>
                 <div class="foto-usuario" align="right">
-                    <img src="img/contraseña.png" width="35" height="35">
+                    <img src="img/contrasenia.png" width="35" height="35">
                 </div>
                 <div class="fondo-box" align="center">
                     <input class="form-control" name="contrasenia" type="password" placeholder="Contraseña">
