--- a/src/main/resources/templates/crearComplejos.hbs
+++ b/src/main/resources/templates/crearComplejos.hbs
@@ -45,13 +45,13 @@
                       {{/each}}
                   </select>
         </div><br><br><br><br><br><br>
-          <div class="general-guardar">
-        <button class="boton_guardar" onclick="location.href='/crearEgreso7'">Volver</button>
-      </div>
            <div class="general-siguiente">
-         <button class="boton_siguiente" type="submit">Siguiente</button>
-         </form>
-       </div><br><br><br><br>
+            <button class="boton_siguiente" type="submit">Siguiente</button>
+      </form>
+      </div>
+        <div class="general-siguiente2">
+        <button class="boton_siguiente" onclick="location.href='/crearEgreso6'">Volver</button>
+        </div><br><br><br><br>
            <div class="general-home">
            <button class="boton_home" onclick="location.href='/'">Volver a Home</button>
            </div>
