cambios de nacho

--- a/src/main/resources/templates/seleccion-articulos.hbs
+++ b/src/main/resources/templates/seleccion-articulos.hbs
@@ -36,7 +36,7 @@
    </div>
    </form>
    <div class="general-siguiente2">
-   <button class="boton_siguiente" onclick="location.href='/crearEgreso4'">Volver</button>
+       <button class="boton_siguiente" onclick="location.href='/crearEgreso4'">+ Articulos</button>
    </div>
    <br><br><br><br><br><br>
        <div class="general-home">
