--- a/src/main/resources/templates/cargar-organizacion.hbs
+++ b/src/main/resources/templates/cargar-organizacion.hbs
@@ -23,7 +23,7 @@
            <div class="box-Medio">
              <select class="opcion-multiple" name="organizacion">
                       {{#each organizaciones}}
-                          <option value='{{nombre_ficticio}}'>{{nombre_ficticio}}</option>
+                          <option value='{{nombreFicticio}}'>{{nombreFicticio}}</option>
                       {{/each}}
                  </select>
             </div>
@@ -48,7 +48,7 @@
        </div>
        <br><br><br><br><br>
            <div class="general-home">
-           <button class="boton_home" onclick="location.href='/'">Volver a Home</button>
+               <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
            </div>
            </div>
       </body>
