--- a/src/main/resources/templates/crearComplejos.hbs
+++ b/src/main/resources/templates/crearComplejos.hbs
@@ -53,7 +53,7 @@
             <button class="boton_siguiente" onclick="location.href='/crearEgreso6'">Volver</button>
         </div><br><br><br><br>
            <div class="general-home">
-           <button class="boton_home" onclick="location.href='/'">Volver a Home</button>
+           <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
            </div>
            </div>
       </body>
