--- a/src/main/resources/public/css/estilos-login.css
+++ b/src/main/resources/public/css/estilos-login.css
@@ -8,9 +8,16 @@ background-image: url("https://i.pinimg.com/originals/da/a6/55/daa6550f1247a7350
   align-self: center;
   align-items: center;
   margin: 0 auto;
-  width: 400px;
-  height: 400px;
+  width: 40%;
+  height: 50%;
   opacity: 1.5;
+}
+
+.space-evenly-vert {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .foto-usuario{
@@ -25,7 +32,6 @@ background-image: url("https://i.pinimg.com/originals/da/a6/55/daa6550f1247a7350
   background: none;
   width: 100px;
   height: 30px;
-  float:left;
   align-self: center;
 }
 
@@ -33,6 +39,15 @@ background-image: url("https://i.pinimg.com/originals/da/a6/55/daa6550f1247a7350
    width:100px;
    height: 100px;
    align: center;
+}
+.margin-left{
+  margin-left: 5%;
+}
+
+.input-row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .foto_contraseña{
@@ -45,14 +60,14 @@ h1{
   font-style:italic;
   font-size:2em;
   color: white;
-  font-family:"Segoe UI";
+  font-family:"Lato", sans-serif;
   font-weight: lighter;
   text-align: center;
 }
 
 .boton_personalizado{
   font-size: 15px;
-  font-family:"Segoe UI";
+  font-family:"Lato", sans-serif;
   font-style:italic;
   color: white;
   background-color: #1788AF;
@@ -69,14 +84,13 @@ h1{
   float: center;
 }
 
-.boton_home{
-  border: none;
-  background: #A3ABAF;
-  width: 10em;
-  height: 2em;
+.texto{
   text-align: center;
-  font-size: 15px;
-  font-family:"Segoe UI";
-  font-style:italic;
-  color: black;
+  font-family: "Lato",sans-serif;
+}
+
+.textoRojo{
+  text-align: center;
+  font-family: "Lato",sans-serif;
+  color: red;
 }
