--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -1,38 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/27517fada0.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilos-login.css">
     <title>Login</title>
 </head>
-  <body>
-    <h1>Login</h1>
-      <div class="general"><br><br>
-            <form action="/login" method="post" class="form-">
-                <div align="center">
-                    <img class="foto_login" src="img/login.png">
-                </div><br><br>
-                <div class="foto-usuario" align="right">
-                    <img src="img/usuario.png" width="35" height="35">
-                </div>
-                <div class="fondo-box" align="center">
-                    <input class="form-control" name="nombreDeUsuario" placeholder="Usuario">
-                </div><br><br><br><br>
-                <div class="foto-usuario" align="right">
-                    <img src="img/contrasenia.png" width="35" height="35">
-                </div>
-                <div class="fondo-box" align="center">
-                    <input class="form-control" name="contrasenia" type="password" placeholder="Contraseña">
-                </div><br><br><br>
-                <div class="general-home">
-                <button class="boton_home" type="submit" onclick="location.href='index-menu-revisor.html'">Iniciar Sesión</button>
-            </form>
+<body>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<h1>Login</h1>
+<div class="general"><br><br>
+    <form action="/" method="post" class="form-">
+        <div class="space-evenly-vert">
+            <div align="center">
+                <img class="foto_login" src="img/login.png" alt="login">
+            </div>
+            <br>
+
+            <div class="input-row">
+                <img class="m-2" src="img/usuario.png" alt="" width="5%">
+                <input name="nombreDeUsuario" placeholder="Usuario">
+            </div>
+
+            <div class="input-row">
+                <img class="m-2" src="img/contrasenia.png" alt="" width="5%">
+                <input name="contrasenia" type="password" placeholder="Contraseña">
+            </div>
+            {{#if incorrecta}}
+                <span class="textoRojo"> Contraseña incorrecta.</span>
+            {{/if}}
+            {{#if user-invalido}}
+                <span class="textoRojo"> Usuario inexistente. </span>
+            {{/if}}
+
+            {{#if bloqueado}}
+                <span class="textoRojo"> Usuario bloqueado, espere 5 minutos. </span>
+            {{/if}}
+            <br><br>
+            <div class="general-home">
+                <button class="texto btn btn-dark rounded-pill" type="submit"
+                        onclick="location.href='index-menu-revisor.html'">Iniciar Sesión
+                </button>
+            </div>
         </div>
-    </div>
-  </body>
+    </form>
+</div>
+</div>
+</body>
 </html>
