--- a/src/main/resources/templates/asociar-home.hbs
+++ b/src/main/resources/templates/asociar-home.hbs
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilo-organizacion.css">
-    <title>Asociar ingresos a egresos</title>
+    <title>Asociar </title>
 </head>
     <body>
       <div class="titulo">
