--- a/src/main/resources/templates/asociar-home.hbs
+++ b/src/main/resources/templates/asociar-home.hbs
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/27517fada0.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="/js/logic.js"></script>
-    <link rel="stylesheet" href="/css/estilo-organizacion.css">
-    <title>Asociar </title>
+    <link rel="stylesheet" href="/css/estilos-home.css">
+    <title>Login</title>
 </head>
-    <body>
-      <div class="titulo">
-      <h1 class="nombre-titulo">Asociar Ingresos a Egresos</h1>
-      </div>
-      <div class="general">
-        <form action="/asocIngresoEgreso" method="post" class="form-">
+<body>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <div class="titulo">
+        <h1 class="nombre-titulo">Asociar Home</h1>
+    </div>
+    <div class="general">
+        <form action="/asocIngresoEgreso" method="post" class="form-select">
+            <br><br><br>
+            <div class="general-home">
+                <button class="btn-dark align-content-center" onclick="location.href='/asociar'">Asociar Egreso Ingres</button>
+            </div>
+            <div class="general-medio">
+                <h1 class="medio">Operaciones de ingreso:</h1>
+            </div>
+            <br>
+
+            <div class="box-Medio">
+            </div>
+        <br><br><br>
+        <hr>
+            <div class="general-numero">
+            </div>
+        <br>
+            <div class="box-numero">
+            </div>
         <br><br><br>
 
-      <div class="general-medio">
+        <br><br><br><br><br>
+    </form>
 
-        <h1 class="medio">Operaciones de ingreso:</h1>
-      </div>
-            <br>
-         <div class="box-Medio">
-               {{#each ingresos}}
-                       <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}"> <label for="cbox2">{{id}}-{{descripcion}}</label>
-                   <br><br>
-               {{/each}}
-         </div>
-
-          <br><br><br>
-            <hr>
-
-            <div class="general-numero">
-
-        <h1 class="numero">Operaciones de egreso:</h1>
-           </div>
-                <br>
-           <div class="box-numero">
-                          {{#each egresos}}
-                                  <input type="checkbox" id="cbox1" name="egreso" value="{{id}}"> <label for="cbox2">{{id}}-{{descripcion}}</label>
-                              <br><br>
-                          {{/each}}
-                    </div>
-         <br><br><br>
-         <div class="general-siguiente">
-       <button class="boton_siguiente" type="submit">Asociar</button>
-     </div><br><br><br><br><br>
-     </form>
-     <div class="general-home">
-     <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
-     </div>
-     </div>
-    </body>
+    <div class="general-home">
+        <button class="boton_home btn-lig" onclick="location.href='/home'">Volver a Home</button>
+    </div>
+</div>
+</body>
 </html>
