Home refactoreado, letras y navbar con tamaño responsive

--- a/src/main/resources/templates/index-menu-revisor.hbs
+++ b/src/main/resources/templates/index-menu-revisor.hbs
@@ -19,9 +19,9 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
-        <div class="space-evenly-horizontal navbar-nav ml-auto">
+        <div class="space-around-horizontal navbar-nav ml-auto">
             <button type="button" class="btn btn-dark align-content-center"
                     onclick="location.href='CrearOperacionEgreso'">Crear Operacion de Egreso
             </button>
@@ -40,24 +40,27 @@
         </div>
 
         <form action="/logout" method="get" class="form d-flex justify-content-end">
-                <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Salir</button>
-            </form>
+            <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Salir</button>
+        </form>
 
     </div>
 </nav>
 
 
-<h1 class="titulo">Poem</h1>
+<h1 class="display-1 space-around-horizontal text-center text-dark">Poem</h1>
 
-
-<h3 class="subtitulo">¿Quienes somos?</h3>
-<p class="descripcion">
-    Somos una organización sin fines de lucro fundada en el año 2003, donde nuestra misión es acompañar la preparación
-    laboral, promover el desarrollo, generar emprendimientos y fortalecer organizaciones productivas ya constituidas.
-    <br>
-    Apoyamos a toda persona que necesite apoyo, asesoramiento y/o acompañamiento en proyectar sus ideas como
-    herramientas para generar un trabajo autónomo, así como a jóvenes y adultos que necesitan orientación y capacitación
-    para mejorar su formación con el fin de conseguir un empleo
-</p>
+<br>
+<h3 class="space-around-horizontal display-6 text-center">¿Quienes somos?</h3>
+<br>
+<div class="container-body-home text-center">
+    <p class=" text-dark justify-content-around">
+        Somos una organización sin fines de lucro fundada en el año 2003, donde nuestra misión es acompañar la
+        preparación laboral, promover el desarrollo, generar emprendimientos y fortalecer organizaciones productivas ya
+        constituidas.
+        Apoyamos a toda persona que necesite apoyo, asesoramiento y/o acompañamiento en proyectar sus ideas como
+        herramientas para generar un trabajo autónomo, así como a jóvenes y adultos que necesitan orientación y
+        capacitación para mejorar su formación con el fin de conseguir un empleo.
+    </p>
+</div>
 </body>
 </html>
