--- a/src/main/resources/public/css/estilos.css
+++ b/src/main/resources/public/css/estilos.css
@@ -1,6 +1,5 @@
 body{
   font-family: 'Lato', sans-serif;
-
 }
 
 .utnLogo{
@@ -10,7 +9,7 @@ body{
 
 .fondo{
     height: 100%;
-    width=100%;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto;
