titulo de asociar alineado

--- a/src/main/resources/templates/asociar-home.hbs
+++ b/src/main/resources/templates/asociar-home.hbs
@@ -18,32 +18,33 @@
     <title>Login</title>
 </head>
 <body>
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <div class="titulo">
-        <h1 class="nombre-titulo">Asociar Home</h1>
-    </div>
-    <div class="general">
-        <form action="/asocIngresoEgreso" method="post" class="form-select">
-            <br><br><br>
-            <div class="general-home">
-                <button class="btn-dark align-content-center" onclick="location.href='/asociar'">Asociar Egreso Ingres</button>
-            </div>
-            <div class="general-medio">
-                <h1 class="medio">Operaciones de ingreso:</h1>
-            </div>
-            <br>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<div class="display-2 text-center space-evenly-horizontal">
+    <h1 >Asociar Home</h1>
+</div>
+<div class="general">
+    <form action="/asocIngresoEgreso" method="post" class="form-select">
+        <br><br><br>
+        <div class="general-home">
+            <button class="btn-dark align-content-center" onclick="location.href='/asociar'">Asociar Egreso Ingres
+            </button>
+        </div>
+        <div class="general-medio">
+            <h1 class="medio">Operaciones de ingreso:</h1>
+        </div>
+        <br>
 
-            <div class="box-Medio">
-            </div>
+        <div class="box-Medio">
+        </div>
         <br><br><br>
         <hr>
-            <div class="general-numero">
-            </div>
+        <div class="general-numero">
+        </div>
         <br>
-            <div class="box-numero">
-            </div>
+        <div class="box-numero">
+        </div>
         <br><br><br>
 
         <br><br><br><br><br>
